<?xml version="1.0"?>
<package format="2">
  <name>tricycle_description</name>
  <version>1.0.0</version>
  <description>The package that contins the urdf files for simple tricycle robot</description>

  <maintainer email="julius.gelsvartas@gmail.com">Julius Gelsvartas</maintainer>
  <author email="julius.gelsvartas@gmail.com">Julius Gelsvartas</author>

  <license>Apache 2.0</license>
  <url type="website">https://github.com/JuliusGel/RVSP</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
